--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <p2>Лабораторная работа №2</p2>
     <br>
             <p3>Разработка простого веб-приложения (html, css, js + json.xml):
-                            1. Репозиторий проекта доступен по ссылке:
+                            1. Репозиторий проекта доступен по ссылке: <a href="https://github.com/divoskov/inet_lab2" target="_blank">Репозиторий</a>
                             2. Веб-страница с описанием проекта доступна по ссылке:
             </p3>
             </div>
