--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <br>
             <p3>Разработка простого веб-приложения (html, css, js + json.xml):
                             1. Репозиторий проекта доступен по ссылке: <a href="https://github.com/divoskov/inet_lab2" target="_blank">Репозиторий</a>
-                            2. Веб-страница с описанием проекта доступна по ссылке: <a href="https://divoskov.github.io/inet_lab2/" target="_blank>Лэндинг</a>
+                            2. Веб-страница с описанием проекта доступна по ссылке: <a href="https://divoskov.github.io/inet_lab2/" target="_blank">Лэндинг</a>
             </p3>
             </div>
             <div class="lr">
